--- a/postgres-configmap.yaml
+++ b/postgres-configmap.yaml
@@ -1,10 +1,11 @@
 apiVersion: v1
-kind: ConfigMap
+kind: Secret
 metadata:
-  name: postgres-config
+  name: pg-secret
+  namespace: sonarqube
   labels:
     app: postgres
 data:
-  POSTGRES_DB: sonar
-  POSTGRES_USER: sonar
-  POSTGRES_PASSWORD: sonar
+  POSTGRES_DB: c29uYXI=
+  POSTGRES_USER: c29uYXI=
+  POSTGRES_PASSWORD: c29uYXI=
