--- a/postgres-deployment.yaml
+++ b/postgres-deployment.yaml
@@ -18,9 +18,25 @@ spec:
           imagePullPolicy: "IfNotPresent"
           ports:
             - containerPort: 5432
-          envFrom:
-            - configMapRef:
-                name: postgres-config
+          env:
+            - name: POSTGRES_DB 
+              valueFrom:
+                secretKeyRef:
+                  name: pg-secret 
+                  key: POSTGRES_DB   
+
+            - name: POSTGRES_USER 
+              valueFrom:
+                secretKeyRef:
+                  name: pg-secret
+                  key: POSTGRES_USER
+
+            - name: POSTGRES_PASSWORD 
+              valueFrom:
+                secretKeyRef:
+                  name: pg-secret
+                  key: POSTGRES_PASSWORD
+            
           volumeMounts:
             - mountPath: /var/lib/postgresql/data
               name: postgredb
