--- a/sonar-secret.yaml
+++ b/sonar-secret.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: sonar-secret
+  namespace: sonarqube
 type: Opaque
 data:
   SONARQUBE_JDBC_USERNAME: c29uYXI=
