--- a/sonar-storage-data.yaml
+++ b/sonar-storage-data.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: sonar-data
+  name: sonar-data-pvc
   namespace: sonarqube
 spec:
   accessModes:
@@ -14,7 +14,7 @@ spec:
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: sonar-pv
+  name: sonar-data-pv
   namespace: sonarqube
   labels:
     type: local
